--- a/index.html
+++ b/index.html
@@ -206,11 +206,12 @@
             <ul class="footer_links">
                 <li class="footerlist_item"> <a href="">abhijeet mali</a></li>
                 <li class="footerlist_item"> <a href="">sagar chavan</a></li>
+                 <li class="footerlist_item"> <a href="">Saurabh patil</a></li>
                 <li class="footerlist_item"> <a href="">bharat jadhav</a></li>
                 <li class="footerlist_item"> <a href="">gaurav magare</a></li>
                 <li class="footerlist_item"> <a href="">ajay pawar</a></li>
                 <li class="footerlist_item"> <a href="">ajinkya suryawanshi</a></li>
-                <li class="footerlist_item"> <a href="">chandler bing</a></li>
+               
                 <li class="footerlist_item"> <a href="">Joey tribbiani</a></li>
 
             </ul>
